finish the lex version.

--- a/Assignment2/Makefile
+++ b/Assignment2/Makefile
@@ -1,9 +1,9 @@
 all: main.cpp scanner.cpp lexer.cpp
 	g++ main.cpp scanner.cpp tokens.cpp -o scanner
 
-lexer.cpp: lexer.l
+lexer.cpp: lexer.l tokens.cpp
 	flex -o lexer.cpp lexer.l
-	g++ lexer.cpp -o lexer 
+	g++ lexer.cpp tokens.cpp -o lexer 
 
 clean:
 	rm -rf scanner lexer lexer.cpp
