--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,8 @@
         "cinttypes": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "unordered_set": "cpp",
+        "queue": "cpp"
     }
 }
